--- a/src/sass/pages/index.scss
+++ b/src/sass/pages/index.scss
@@ -1,4 +1,3 @@
-
 .repo {
   &__search {
     border-bottom: 1px solid $color-border-primary !important;
@@ -6,27 +5,27 @@
 }
 
 .profile {
-  &__avatar--sm{
-    border-radius:50%;
-    margin-right: .5em;
+  &__avatar--sm {
+    border-radius: 50%;
+    margin-right: 0.5em;
   }
-  &__name--sm{
+  &__name--sm {
     font-size: 26px;
     line-height: 1.25;
-    font-weight:600;
+    font-weight: 600;
   }
-  &__status--sm{
+  &__status--sm {
     border-radius: 6px !important;
     border: 1px solid $color-border-primary !important;
-    padding:.2em;
-    margin-bottom:.5em;
+    padding: 0.2em;
+    margin-bottom: 0.5em;
   }
-  &__input{
-    width:100% !important;
+  &__input {
+    width: 100% !important;
     padding: 5px 10px;
     font-size: 14px;
     line-height: 20px;
-    width:65%;
+    width: 65%;
     color: $color-btn-text;
     border: 1px solid $color-border-primary;
     border-radius: 6px;
@@ -37,13 +36,12 @@
     width: fit-content;
     z-index: 10;
     margin-top: -30px;
-   
   }
   &__img {
     border-radius: 50%;
-     @include media-query($medium-down){
-      width:150px;
-      height:150px;
+    @include media-query($medium-down) {
+      width: 150px;
+      height: 150px;
     }
   }
   &__statusEmoji {
@@ -55,16 +53,16 @@
     border-radius: 2em;
     padding: 3px;
     box-shadow: $color-shadow-small;
-    @include media-query($medium-down){
-    right: 0px;
-    top: 90px;
+    @include media-query($medium-down) {
+      right: 0px;
+      top: 90px;
     }
   }
- &__fullname{
-    @include media-query($medium-down){
-    font-size:14px;
-    } 
- }
+  &__fullname {
+    @include media-query($medium-down) {
+      font-size: 14px;
+    }
+  }
   &__username {
     font-size: 20px;
     font-style: normal;
@@ -82,20 +80,20 @@
     font-weight: 500;
     margin-bottom: 1em;
   }
-   &__cancelBtn{
-       color: $color-btn-text;
+  &__cancelBtn {
+    color: $color-btn-text;
     background-color: $color-btn-bg;
     border-color: $color-btn-border;
     transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
     transition-property: color, background-color, border-color;
     font-weight: 500;
-    margin-left:.5em;
+    margin-left: 0.5em;
     padding: 3px 12px;
     font-size: 12px;
     border-radius: 6px;
   }
-   &__saveBtn{
-     color:$white;
+  &__saveBtn {
+    color: $white;
     background-color: $color-btn-primary-bg;
     border-color: $color-btn-border;
     transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
@@ -104,10 +102,10 @@
     padding: 3px 12px;
     font-size: 12px;
     border-radius: 6px;
-   &:hover{
-     color:$white;
-   }
-   }
+    &:hover {
+      color: $white;
+    }
+  }
   &__textarea {
     width: 100%;
     padding: 10px;
@@ -118,8 +116,8 @@
     font-size: 15px;
     span {
       margin-right: 0.3em;
-      svg{
-          fill:$color-text-tertiary;
+      svg {
+        fill: $color-text-tertiary;
       }
     }
   }
@@ -131,8 +129,8 @@
     font-size: 15px;
     span {
       margin-right: 0.3em;
-      svg{
-          fill:$color-text-tertiary;
+      svg {
+        fill: $color-text-tertiary;
       }
     }
   }
@@ -145,15 +143,15 @@
         margin-right: 0.3em;
         svg {
           width: 16px;
-          fill:$color-text-tertiary !important;
+          fill: $color-text-tertiary !important;
         }
       }
     }
   }
-  &__column{
+  &__column {
     flex-wrap: wrap;
   }
-  &__input{
-    margin-left:.2em;
+  &__input {
+    margin-left: 0.2em;
   }
 }
