--- a/src/sass/components/Search/search.scss
+++ b/src/sass/components/Search/search.scss
@@ -1,5 +1,5 @@
 .repository__search {
-  padding: 5px 10px;
+  padding: 7px 10px;
   font-size: 14px;
   line-height: 20px;
   width: 65%;
@@ -8,4 +8,7 @@
   border: 1px solid $color-border-primary;
   border-radius: 6px;
   outline: none;
+  @include media-query($medium-down) {
+    width: 100%;
+  }
 }
